--- a/html5up-hyperspace/index.html
+++ b/html5up-hyperspace/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">home</a></li>
-							<li><a href="#one">me</a></li>
+							<li><a href="#one">about me</a></li>
 							<li><a href="#two">resume</a></li>
 							<li><a href="#three">contact</a></li>
 						</ul>
@@ -71,7 +71,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
+						<!--<section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -82,14 +82,15 @@
 									</ul>
 								</div>
 							</div>
-						</section>
+						</section>-->
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Resume</h2>
+							<p>Experienced Agilist, Certified Scrum Master with extensive experience in Agile software development, including analysis, design, development, testing and implementation of software applications. Exceptional communication, analytical, interpersonal, presentation and client relationship management skills capable of managing multiple projects simultaneously.
+</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -123,7 +124,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="generic.html" class="button">Download Resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -132,10 +133,11 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+                                    <p>Drop me a line, if you feel inclined.</p>
+								<!--	<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -153,7 +155,7 @@
 										<ul class="actions">
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
-									</form>
+									</form> -->
 								</section>
 								<section>
 									<ul class="contact">
@@ -166,18 +168,15 @@
 											<h3>Email</h3>
 											<a href="#">espedito.muniz@gmail.com</a>
 										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
+										
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+												<li><a href="https://github.com/espeditom" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.instagram.com/espedito.m" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="https://www.linkedin.com/in/espeditomuniz/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
